# mcs-homework

./: .gitignore  README.md  run-tests
.github/workflows/: task_branch.yml
App/: App.csproj  Program.cs  ViewLocator.cs
App/Models/: Field.cs
App/ViewModels/: MainWindowViewModel.cs
App/Views/: Field.axaml  Field.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Client/: App.axaml  App.axaml.cs  Client.csproj  Program.cs  ViewLocator.cs
Client/Models/: Field.cs
Client/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Client/Views/: MainWindow.axaml  (+1 more)
Server/: Server.csproj
TmpClient/: Program.cs
c#/: README.md  TASK.md
cpp/lab-05_c-io/: CMakeLists.txt
cpp/lab-05_c-io/tests/: 00-print-txt.expected-output  00-print-txt.test.args
cpp/lab-09_figures/: .gitignore  CMakeLists.txt
cpp/lab-09_figures/src/: Scheme.cpp
cpp/lab-09_figures/tests/: 00_dummy.expected-output
hw-01_bmp/: CMakeLists.txt
hw-02_huffman/: CMakeLists.txt  README.md
lab-01_makefile/: .gitignore  Makefile
lab-02_cstrings/: .gitignore  CMakeLists.txt
lab-02_cstrings/include/: test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: README.md
lab-04_intrusive-list/: CMakeLists.txt  README.md
lab-05_c-io/: README.md
lab-06_int-vector/: .gitignore  CMakeLists.txt
lab-07_matrix/: CMakeLists.txt
lab-08_shared-ptr/: CMakeLists.txt  Makefile  README.md
lab-08_shared-ptr/include/: shared_ptr.hpp
lab-08_shared-ptr/src/: matrix.cpp  shared_ptr.cpp
lab-09_figures/: Makefile  README.md
lab-10_cppio/: README.md
lab-11_vector/: CMakeLists.txt  README.md
lab-13_array/: CMakeLists.txt
lab-14_linq/: CMakeLists.txt  README.md
(+130 files in other folders)
